--- a/pom.xml
+++ b/pom.xml
@@ -57,14 +57,14 @@
 			<dependency>
 				<groupId>org.codehaus.groovy</groupId>
 				<artifactId>groovy-all</artifactId>
-				<version>2.4.5</version>
+				<version>2.4.7</version>
 			</dependency>
 
 			<!-- aspectjweaver (support spring aop) -->
 			<dependency>
 				<groupId>org.aspectj</groupId>
 				<artifactId>aspectjweaver</artifactId>
-				<version>1.8.7</version>
+				<version>1.8.9</version>
 			</dependency>
 
 			<!-- json -->
@@ -96,7 +96,7 @@
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-log4j12</artifactId>
-				<version>1.7.5</version>
+				<version>1.7.21</version>
 			</dependency>
 
 			<!-- freemarker -->
@@ -115,9 +115,9 @@
 
 			<!-- commons-lang -->
 			<dependency>
-				<groupId>commons-lang</groupId>
-				<artifactId>commons-lang</artifactId>
-				<version>2.6</version>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.4</version>
 			</dependency>
 
 			<!-- servlet -->
@@ -146,21 +146,20 @@
 			<dependency>
 				<groupId>com.alibaba</groupId>
 				<artifactId>druid</artifactId>
-				<version> 1.0.16</version>
+				<version> 1.0.21</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.drools</groupId>
 				<artifactId>drools-core</artifactId>
-				<version>6.3.0.Final</version>
+				<version>6.4.0.Final</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.drools</groupId>
 				<artifactId>drools-compiler</artifactId>
-				<version>6.3.0.Final</version>
+				<version>6.4.0.Final</version>
 			</dependency>
-
 
 			<!-- c3p0 -->
 			<dependency>
@@ -173,13 +172,13 @@
 			<dependency>
 				<groupId>org.mybatis</groupId>
 				<artifactId>mybatis-spring</artifactId>
-				<version>1.2.2</version>
+				<version>1.3.0</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.mybatis</groupId>
 				<artifactId>mybatis</artifactId>
-				<version>3.2.8</version>
+				<version>3.4.1</version>
 			</dependency>
 
 			<!-- mysql-connector -->
@@ -193,14 +192,14 @@
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
-				<version>4.3.6</version>
+				<version>4.5.2</version>
 			</dependency>
 
 			<!-- javax.mail -->
 			<dependency>
 				<groupId>javax.mail</groupId>
 				<artifactId>mail</artifactId>
-				<version>1.4.6</version>
+				<version>1.4.7</version>
 			</dependency>
 
 			<!-- quartz ：quartz-2.2.3/c3p0-0.9.1.1/slf4j-api-1.6.6 -->
