--- a/job-console/src/main/webapp/WEB-INF/web.xml
+++ b/job-console/src/main/webapp/WEB-INF/web.xml
@@ -6,17 +6,17 @@
 
 	<context-param>
 		<param-name>webAppRootKey</param-name>
-		<param-value>xxl-job-admin</param-value>
+		<param-value>job-console</param-value>
 	</context-param>
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath*:applicationcontext-*.xml</param-value>
+		<param-value>classpath*:applicationContext-*.xml,classpath*:spring/applicationContext-*.xml</param-value>
 	</context-param>
 
-	<listener>
-		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-	</listener>
+	<!-- <listener> -->
+	<!-- <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class> -->
+	<!-- </listener> -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
@@ -44,7 +44,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath*:springmvc-context.xml</param-value>
+			<param-value>classpath*:applicationContext-mvc.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
